tests/NormalTests/paczka1/fuzzy1/51324168.err
Error in line 7: WDkY A469 52,4
Error in line 24: VDUAw2vtPYy S276 49,1
Error in line 19: A484 A484 14,6
Error in line 31: 1oZuqZ S276 75,2
